Ensure the JVM process adheres to CPU and memory limits imposed by Docker (closes #21)